fileIn関数の引数を逐語的文字列リテラルに統一

--- a/install.ms
+++ b/install.ms
@@ -1,5 +1,5 @@
 /*! © 2022 imaoki | MIT License | https://github.com/imaoki */
 (
-  (fileIn "TestValue.ms").Install()
+  (fileIn @"TestValue.ms").Install()
   ok
 )
